# tdd

./: .clang-format  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
c2/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
c5/: CMakeLists.txt  Http.h  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
c6/: CMakeLists.txt  Holding.h  Portfolio.cpp  Portfolio.h  PortfolioTest.cpp
c9/: Area.cpp  Area.h  AreaTest.cpp  CMakeLists.txt  GeoServer.cpp  GeoServer.h  GeoServerTest.cpp  Location.cpp  Location.h  LocationTest.cpp  ThreadPool.h  ThreadPoolTest.cpp  User.h  Work.h  WorkTest.cpp
cmake/: compilerFlags.cmake  findDependencies.cmake  setup.cmake  summary.cmake
